--- a/android/app/src/main/res/layout/fragment_allergy_dialog.xml
+++ b/android/app/src/main/res/layout/fragment_allergy_dialog.xml
@@ -319,6 +319,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_marginTop="30dp"
+        android:gravity="center"
         app:layout_constraintEnd_toEndOf="@+id/btn_add_drug_side_effect"
         app:layout_constraintStart_toStartOf="@+id/tv_drug_side_effect"
         app:layout_constraintTop_toBottomOf="@+id/et_drug_side_effect" >
@@ -342,12 +343,14 @@
     </LinearLayout>
 
     <TextView
+        android:id="@+id/warn_register_allergy"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:text="이미 등록된 약물입니다."
         android:textColor="@color/red"
         android:textSize="12sp"
+        android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@+id/btn_confirm_allergy"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
