--- a/android/app/src/main/res/layout/fragment_allergy_dialog.xml
+++ b/android/app/src/main/res/layout/fragment_allergy_dialog.xml
@@ -1,12 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="20dp"
+    android:fillViewport="true"
     android:background="@drawable/dialog_background">
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="20dp">
 
     <TextView
         android:id="@+id/tv_title"
@@ -313,16 +318,29 @@
         app:layout_constraintEnd_toEndOf="@+id/food_allergies_linear"
         app:layout_constraintTop_toTopOf="@+id/et_drug_side_effect" />
 
+    <com.google.android.flexbox.FlexboxLayout
+        android:id="@+id/drug_allergy_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        app:flexWrap="wrap"
+        app:flexDirection="row"
+        app:justifyContent="flex_start"
+        app:layout_constraintEnd_toEndOf="@+id/btn_add_drug_side_effect"
+        app:layout_constraintStart_toStartOf="@+id/tv_drug_side_effect"
+        app:layout_constraintTop_toBottomOf="@+id/et_drug_side_effect" />
+
+    <!-- "현재 등록된 정보가 없습니다." 표시 영역은 따로 두는 게 좋아요 -->
     <LinearLayout
         android:id="@+id/no_info_linear"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_marginTop="30dp"
         android:gravity="center"
-        app:layout_constraintEnd_toEndOf="@+id/btn_add_drug_side_effect"
-        app:layout_constraintStart_toStartOf="@+id/tv_drug_side_effect"
-        app:layout_constraintTop_toBottomOf="@+id/et_drug_side_effect" >
+        android:layout_marginTop="10dp"
+        app:layout_constraintTop_toBottomOf="@+id/drug_allergy_container"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
         <ImageView
             android:layout_width="90dp"
@@ -332,15 +350,13 @@
 
         <TextView
             android:id="@+id/registered_allergies"
-            android:layout_width="367dp"
-            android:layout_height="21dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:gravity="center"
             android:text="현재 등록된 정보가 없습니다."
-            android:textColor="@android:color/black"
-            app:layout_constraintEnd_toEndOf="@+id/food_allergies_linear"
-            app:layout_constraintStart_toStartOf="@+id/food_allergies_linear"
-            app:layout_constraintTop_toBottomOf="@+id/et_drug_side_effect" />
+            android:textColor="@android:color/black"/>
     </LinearLayout>
+
 
     <TextView
         android:id="@+id/warn_register_allergy"
@@ -369,4 +385,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/no_info_linear" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
