[🎨 DESIGN] 사용자 프로필 view 추가

--- a/android/app/src/main/res/layout/fragment_allergy_dialog.xml
+++ b/android/app/src/main/res/layout/fragment_allergy_dialog.xml
@@ -295,9 +295,10 @@
         android:layout_height="40dp"
         android:layout_marginTop="17dp"
         android:background="@drawable/login_edittext"
-        android:hint="      알레르기 항목을 입력하세요"
+        android:hint="알레르기 항목을 입력하세요"
         android:inputType="text"
         android:textSize="12sp"
+        android:paddingStart="15dp"
         app:layout_constraintStart_toStartOf="@+id/tv_drug_side_effect"
         app:layout_constraintTop_toBottomOf="@id/tv_drug_side_effect" />
 
