--- a/android/app/src/main/res/layout/fragment_profile.xml
+++ b/android/app/src/main/res/layout/fragment_profile.xml
@@ -106,27 +106,30 @@
             android:textColor="@color/black"
             android:textStyle="bold"
             android:textSize="18sp"
-            android:background="@drawable/rounded_btn"
-            app:strokeColor="#4285F4"
-            app:strokeWidth="1dp"
-            app:cornerRadius="8dp"
-            app:elevation="0dp"/>
+            android:background="@drawable/rounded_btn"/>
 
         <!-- 개인 정보 -->
-
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="30dp">
 
+            <View
+                android:id="@+id/view"
+                android:layout_width="match_parent"
+                android:layout_height="0.8dp"
+                android:background="@color/light_grey"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:layout_editor_absoluteX="30dp" />
 
             <LinearLayout
+                android:id="@+id/linearLayout4"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="16dp"
                 android:orientation="vertical"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/view"
                 tools:layout_editor_absoluteX="16dp">
 
                 <TextView
@@ -134,7 +137,7 @@
                     android:layout_height="wrap_content"
                     android:text="개인 정보"
                     android:textColor="@android:color/black"
-                    android:textSize="18sp"
+                    android:textSize="20sp"
                     android:textStyle="bold" />
 
                 <GridLayout
@@ -167,10 +170,10 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_columnWeight="1"
-                        android:layout_marginTop="4dp"
-                        android:textStyle="bold"
+                        android:layout_marginTop="12dp"
                         android:textColor="@color/black"
                         android:textSize="16sp"
+                        android:textStyle="bold"
                         tools:text="2000.03.04" />
 
                     <TextView
@@ -178,7 +181,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_columnWeight="1"
-                        android:layout_marginTop="4dp"
+                        android:layout_marginTop="12dp"
                         android:textColor="@color/gray"
                         android:textStyle="bold"
                         tools:text="연락처를 등록해주세요" />
@@ -194,16 +197,31 @@
                         android:textStyle="bold" />
 
                     <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_columnWeight="1"
+                        android:layout_marginTop="16dp" />
+
+                    <TextView
                         android:id="@+id/tv_blood_type"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_columnWeight="1"
-                        android:layout_marginTop="4dp"
+                        android:layout_marginTop="16dp"
                         android:textColor="@color/gray"
                         android:textStyle="bold"
                         tools:text="혈액형을 등록해주세요" />
                 </GridLayout>
             </LinearLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="0.8dp"
+                android:background="@color/light_grey"
+                android:layout_marginTop="40dp"
+                app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
+                tools:layout_editor_absoluteX="30dp" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <!-- 알러지 정보 -->
@@ -212,7 +230,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:padding="30dp"
+            android:paddingHorizontal="30dp"
             android:layout_marginHorizontal="16dp"
             android:layout_marginBottom="16dp">
 
