--- a/android/app/src/main/res/layout/fragment_allergy_dialog.xml
+++ b/android/app/src/main/res/layout/fragment_allergy_dialog.xml
@@ -320,44 +320,54 @@
         app:layout_constraintEnd_toEndOf="@+id/food_allergies_linear"
         app:layout_constraintTop_toTopOf="@+id/et_drug_side_effect" />
 
-    <com.google.android.flexbox.FlexboxLayout
-        android:id="@+id/drug_allergy_container"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        app:flexWrap="wrap"
-        app:flexDirection="row"
-        app:justifyContent="flex_start"
-        app:layout_constraintEnd_toEndOf="@+id/btn_add_drug_side_effect"
-        app:layout_constraintStart_toStartOf="@+id/tv_drug_side_effect"
-        app:layout_constraintTop_toBottomOf="@+id/et_drug_side_effect" />
+        <ScrollView
+            android:id="@+id/scroll_registered_drugs"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:fillViewport="true"
+            app:layout_constraintBottom_toTopOf="@id/btn_confirm_allergy"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/et_drug_side_effect">
 
-    <!-- "현재 등록된 정보가 없습니다." 표시 영역은 따로 두는 게 좋아요 -->
-    <LinearLayout
-        android:id="@+id/no_info_linear"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:gravity="center"
-        android:layout_marginTop="10dp"
-        app:layout_constraintTop_toBottomOf="@+id/drug_allergy_container"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
-        <ImageView
-            android:layout_width="90dp"
-            android:layout_height="90dp"
-            android:layout_gravity="center"
-            android:src="@drawable/ic_user"/>
+                <com.google.android.flexbox.FlexboxLayout
+                    android:id="@+id/drug_allergy_container"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    app:flexDirection="row"
+                    app:flexWrap="wrap"
+                    app:justifyContent="flex_start" />
 
-        <TextView
-            android:id="@+id/registered_allergies"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="현재 등록된 정보가 없습니다."
-            android:textColor="@android:color/black"/>
-    </LinearLayout>
+                <LinearLayout
+                    android:id="@+id/no_info_linear"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:gravity="center"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:layout_width="90dp"
+                        android:layout_height="90dp"
+                        android:src="@drawable/ic_user" />
+
+                    <TextView
+                        android:id="@+id/registered_allergies"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:text="현재 등록된 정보가 없습니다."
+                        android:textColor="@android:color/black" />
+                </LinearLayout>
+
+            </LinearLayout>
+        </ScrollView>
 
 
     <TextView
@@ -375,18 +385,17 @@
         android:layout_marginBottom="10dp"/>
 
 
-    <Button
-        android:id="@+id/btn_confirm_allergy"
-        android:layout_width="150dp"
-        android:layout_height="wrap_content"
-        android:background="@drawable/rounded_btn"
-        android:text="확 인"
-        android:textSize="15sp"
-        android:layout_marginTop="40dp"
-        android:textColor="@android:color/white"
-        app:backgroundTint="@color/blue_navy"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/no_info_linear" />
+        <Button
+            android:id="@+id/btn_confirm_allergy"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:background="@drawable/rounded_btn"
+            android:text="확 인"
+            android:textColor="@android:color/white"
+            android:textSize="15sp"
+            app:backgroundTint="@color/blue_navy"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
