--- a/android/app/src/main/res/layout/fragment_profile.xml
+++ b/android/app/src/main/res/layout/fragment_profile.xml
@@ -114,23 +114,14 @@
             android:layout_height="wrap_content"
             android:padding="30dp">
 
-            <View
-                android:id="@+id/view"
-                android:layout_width="match_parent"
-                android:layout_height="0.8dp"
-                android:background="@color/light_grey"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:layout_editor_absoluteX="30dp" />
-
             <LinearLayout
                 android:id="@+id/linearLayout4"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="16dp"
                 android:orientation="vertical"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/view"
-                tools:layout_editor_absoluteX="16dp">
+                app:layout_constraintTop_toTopOf="parent"
+                tools:layout_editor_absoluteX="46dp">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -216,8 +207,7 @@
                 android:layout_height="0.8dp"
                 android:background="@color/light_grey"
                 android:layout_marginTop="40dp"
-                app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
-                tools:layout_editor_absoluteX="30dp" />
+                app:layout_constraintTop_toBottomOf="@+id/linearLayout4"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
