--- a/android/app/src/main/res/drawable/btn_nav.xml
+++ b/android/app/src/main/res/drawable/btn_nav.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="#5182FF"/> <!-- 배경색 -->
+    <solid android:color="@color/blue_navy"/> <!-- 배경색 -->
     <corners android:radius="18dp"/> <!-- 모서리 radius -->
 </shape>
