--- a/android/app/src/main/res/drawable/edittext_background_rounded.xml
+++ b/android/app/src/main/res/drawable/edittext_background_rounded.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <corners android:radius="8dp"/>
-    <solid android:color="#F0F0F0"/> <stroke android:width="1dp" android:color="#E0E0E0"/>
+    <solid android:color="@color/white"/> <stroke android:width="1dp" android:color="@color/blue_gray"/>
 </shape>
