[🎨 DESIGN] 사용자 프로필 디자인 수정 및 적용

--- a/android/app/src/main/res/layout/fragment_profile.xml
+++ b/android/app/src/main/res/layout/fragment_profile.xml
@@ -112,7 +112,8 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="30dp">
+            android:padding="30dp"
+            android:layout_marginTop="10dp">
 
             <LinearLayout
                 android:id="@+id/linearLayout4"
@@ -134,7 +135,7 @@
                 <GridLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
+                    android:layout_marginTop="5dp"
                     android:columnCount="2"
                     android:rowCount="2">
 
@@ -143,18 +144,19 @@
                         android:layout_height="wrap_content"
                         android:layout_columnWeight="1"
                         android:text="생년월일"
-                        android:textColor="@android:color/black"
-                        android:textSize="14sp"
-                        android:textStyle="bold" />
+                        android:layout_marginTop="10dp"
+                        android:textColor="@color/black"
+                        android:textSize="12sp"/>
 
                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_columnWeight="1"
                         android:text="비상 연락처"
-                        android:textColor="@android:color/black"
-                        android:textSize="14sp"
-                        android:textStyle="bold" />
+                        android:layout_marginStart="30dp"
+                        android:layout_marginTop="10dp"
+                        android:textColor="@color/black"
+                        android:textSize="12sp" />
 
                     <TextView
                         android:id="@+id/tv_dob"
@@ -164,7 +166,8 @@
                         android:layout_marginTop="12dp"
                         android:textColor="@color/black"
                         android:textSize="16sp"
-                        tools:text="2000.03.04" />
+                        tools:text="2000.03.04"
+                        android:textStyle="bold"/>
 
                     <TextView
                         android:id="@+id/tv_emergency_contact"
@@ -172,8 +175,11 @@
                         android:layout_height="wrap_content"
                         android:layout_columnWeight="1"
                         android:layout_marginTop="12dp"
+                        android:textStyle="bold"
+                        android:textSize="16sp"
+                        android:layout_marginStart="30dp"
                         android:textColor="@color/black"
-                        tools:text="연락처를 등록해주세요." />
+                        tools:text="연락처" />
 
                     <TextView
                         android:layout_width="0dp"
@@ -182,8 +188,7 @@
                         android:layout_marginTop="30dp"
                         android:text="혈액형"
                         android:textColor="@android:color/black"
-                        android:textSize="14sp"
-                        android:textStyle="bold" />
+                        android:textSize="12sp"/>
 
                     <TextView
                         android:layout_width="0dp"
@@ -198,7 +203,9 @@
                         android:layout_columnWeight="1"
                         android:layout_marginTop="12dp"
                         android:textColor="@color/black"
-                        tools:text="혈액형을 등록해주세요" />
+                        android:textSize="16sp"
+                        android:textStyle="bold"
+                        tools:text="혈액형" />
                 </GridLayout>
             </LinearLayout>
 
