--- a/android/app/src/main/res/layout/item_hospital.xml
+++ b/android/app/src/main/res/layout/item_hospital.xml
@@ -1,52 +1,85 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
     android:padding="12dp"
     android:background="?attr/selectableItemBackground"
     android:clickable="true"
     android:focusable="true">
 
-    <!-- 이름과 거리 한 줄에 표시 -->
+    <!-- 병원이름 -->
+    <TextView
+        android:id="@+id/text_name"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="병원 이름"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        android:ellipsize="end"
+        android:singleLine="true"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/text_distance"
+        app:layout_constraintTop_toTopOf="parent"/>
+
+    <!-- 거리 km -->
+    <TextView
+        android:id="@+id/text_distance"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="0.0 km"
+        android:textSize="14sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@id/text_name"/>
+
+    <!-- 주소 -->
+    <TextView
+        android:id="@+id/text_address"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="주소"
+        android:textSize="14sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/layout_congestion"
+        app:layout_constraintTop_toBottomOf="@id/text_name"
+        android:ellipsize="end"
+        android:singleLine="true"/>
+
+    <!-- 혼잡도 표시 -->
     <LinearLayout
-        android:layout_width="match_parent"
+        android:id="@+id/layout_congestion"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center_vertical"
-        android:layout_marginBottom="2dp">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@id/text_address"
+        app:layout_constraintBottom_toBottomOf="@id/text_address">
+
+        <View
+            android:id="@+id/view_congestion_dot"
+            android:layout_width="10dp"
+            android:layout_height="10dp"
+            android:layout_marginEnd="6dp"
+            android:background="@color/lime_green"/>
 
         <TextView
-            android:id="@+id/text_name"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="병원 이름"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            android:ellipsize="end"
-            android:singleLine="true"/>
-
-        <TextView
-            android:id="@+id/text_distance"
+            android:id="@+id/text_congestion"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="0.0 km"
-            android:textSize="14sp"
-            android:layout_marginStart="8dp"/>
+            android:text="원활"
+            android:textSize="14sp"/>
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/text_address"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="주소"
-        android:textSize="14sp"/>
-
+    <!-- 전화번호 -->
     <TextView
         android:id="@+id/text_phone"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="전화번호"
-        android:textSize="14sp"/>
-</LinearLayout>
+        android:textSize="14sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/text_address"
+        android:layout_marginTop="2dp"/>
+</androidx.constraintlayout.widget.ConstraintLayout>
