--- a/android/app/src/main/res/layout/activity_agree_term.xml
+++ b/android/app/src/main/res/layout/activity_agree_term.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/main_agree"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:fillViewport="true"
-    android:padding="24dp">
+    android:padding="40dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -24,7 +25,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:layout_marginTop="16dp">
+            android:layout_marginTop="44dp">
 
             <CheckBox
                 android:id="@+id/cbTermsService"
@@ -38,7 +39,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="보기"
-                android:textColor="@color/purple_500"
+                android:textColor="@color/blue_navy"
                 android:textAllCaps="false"
                 style="@style/Widget.MaterialComponents.Button.TextButton"/>
         </LinearLayout>
@@ -61,7 +62,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="보기"
-                android:textColor="@color/purple_500"
+                android:textColor="@color/blue_navy"
                 android:textAllCaps="false"
                 style="@style/Widget.MaterialComponents.Button.TextButton"/>
         </LinearLayout>
@@ -84,7 +85,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="보기"
-                android:textColor="@color/purple_500"
+                android:textColor="@color/blue_navy"
                 android:textAllCaps="false"
                 style="@style/Widget.MaterialComponents.Button.TextButton"/>
         </LinearLayout>
@@ -95,32 +96,41 @@
             android:layout_height="wrap_content"
             android:text="필수 항목에 동의해야 가입이 가능합니다."
             android:textSize="12sp"
-            android:textColor="#667085"
-            android:layout_marginTop="6dp"/>
+            android:textColor="@color/gray"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="10dp"/>
 
         <!-- 동의/취소 버튼 -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:layout_marginTop="24dp">
+            android:layout_marginTop="40dp">
 
-            <com.google.android.material.button.MaterialButton
+            <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btnAgree"
                 android:layout_width="0dp"
-                android:layout_height="48dp"
+                android:layout_height="50dp"
                 android:layout_weight="1"
                 android:text="동의하고 계속"
-                android:textAllCaps="false"/>
+                android:textSize="15sp"
+                android:gravity="center"
+                android:background="@drawable/rounded_btn"
+                android:backgroundTint="@color/blue_navy"
+                android:textColor="@color/white"/>
 
-            <com.google.android.material.button.MaterialButton
+            <Space
+                android:layout_width="15dp"
+                android:layout_height="10dp"/>
+
+            <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btnCancel"
                 android:layout_width="0dp"
-                android:layout_height="48dp"
+                android:layout_height="50dp"
                 android:layout_weight="1"
-                android:layout_marginStart="12dp"
+                android:background="@drawable/rounded_btn"
                 android:text="취소"
-                android:textAllCaps="false"/>
+                android:textColor="@color/blue_navy"/>
         </LinearLayout>
 
     </LinearLayout>
