[🎨 DESIGN] 회원가입 버튼 그림자 제거

--- a/android/app/src/main/res/layout/activity_login.xml
+++ b/android/app/src/main/res/layout/activity_login.xml
@@ -187,6 +187,7 @@
             android:textColor="@color/blue_navy"
             android:background="@drawable/rounded_btn"
             android:textAllCaps="false"
+            android:stateListAnimator="@null"
             android:letterSpacing="0.2"
             app:layout_constraintTop_toBottomOf="@id/btKakao"
             app:layout_constraintStart_toStartOf="parent"
