--- a/android/app/src/main/res/layout/activity_settings.xml
+++ b/android/app/src/main/res/layout/activity_settings.xml
@@ -10,48 +10,63 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
         android:orientation="vertical"
-        android:padding="24dp"
-        android:gravity="center">
+        android:padding="44dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <!-- 설정 제목 -->
         <TextView
             android:id="@+id/tvTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingBottom="16dp"
             android:text="설정"
-            android:textStyle="bold" android:textSize="22sp"
-            android:layout_width="wrap_content" android:layout_height="wrap_content"
-            android:paddingBottom="16dp"/>
+            android:textSize="25sp"
+            android:textStyle="bold" />
 
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_marginVertical="20dp"
-            android:background="#DDDDDD"/>
+            android:background="@color/blue_gray" />
 
-        <com.google.android.material.button.MaterialButton
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btnChangePw"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@drawable/rounded_btn"
+            android:backgroundTint="@color/blue_navy"
+            android:textColor="@color/white"
+            android:textSize="15sp"
             android:text="비밀번호 변경" />
 
-        <com.google.android.material.button.MaterialButton
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btnDeleteAccount"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="회원 탈퇴"
-            android:layout_marginTop="12dp"/>
+            android:layout_marginTop="15dp"
+            android:background="@drawable/rounded_btn"
+            android:backgroundTint="@color/blue_navy"
+            android:textColor="@color/white"
+            android:textSize="15sp"
+            android:text="회원 탈퇴" />
 
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_marginVertical="20dp"
-            android:background="#DDDDDD"/>
-        <com.google.android.material.button.MaterialButton
+            android:background="@color/blue_gray" />
+
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btnLogout"
-            style="?attr/materialButtonOutlinedStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@drawable/rounded_btn"
+            android:textColor="@color/blue_navy"
             android:text="로그아웃" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
