--- a/android/app/src/main/res/layout/fragment_category.xml
+++ b/android/app/src/main/res/layout/fragment_category.xml
@@ -3,7 +3,9 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingTop="80dp">
+    android:paddingTop="80dp"
+    android:paddingLeft="16dp"
+    android:paddingRight="16dp">
 
     <TextView
         android:id="@+id/tv_title"
@@ -13,17 +15,17 @@
         android:textSize="24sp"
         android:textStyle="bold"
         android:gravity="center"
-        android:layout_marginBottom="16dp" />
+        android:layout_marginBottom="20dp" />
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="4dp"
-        android:background="#000000"
-        android:layout_marginBottom="16dp" />
+        android:layout_height="1dp"
+        android:background="@color/blue_gray"
+        android:layout_marginBottom="20dp" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_categories"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="16dp" />
+        android:paddingBottom="16dp" />
 </LinearLayout>
