[🎨 DESIGN] 전체적인 수정

--- a/android/app/src/main/res/layout/fragment_map.xml
+++ b/android/app/src/main/res/layout/fragment_map.xml
@@ -287,6 +287,8 @@ tools:context="nav.MapFragment">
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="15dp"
                 android:layout_marginEnd="20dp"
+                android:textColor="@android:color/white"
+                app:backgroundTint="@color/blue_navy"
                 android:text="길찾기"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent" />
