--- a/android/app/src/main/res/layout/activity_check_email.xml
+++ b/android/app/src/main/res/layout/activity_check_email.xml
@@ -5,12 +5,13 @@
     android:layout_height="match_parent"
     android:fillViewport="true"
     android:background="@android:color/white"
-    android:padding="40dp"
     android:id="@+id/main_email">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:padding="20dp"
+        android:layout_marginTop="20dp"
         android:paddingBottom="32dp">
 
         <!-- 타이틀 -->
