--- a/android/app/src/main/res/layout/activity_login.xml
+++ b/android/app/src/main/res/layout/activity_login.xml
@@ -12,7 +12,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="40dp">
+        android:padding="30dp">
 
         <!-- 제목 -->
         <TextView
@@ -59,7 +59,7 @@
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/etId"
                 android:layout_width="match_parent"
-                android:layout_height="45dp"
+                android:layout_height="50dp"
                 android:background="@drawable/login_edittext"
                 android:hint="이메일 입력"
                 android:padding="5dp"
@@ -100,7 +100,7 @@
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/etPw"
                 android:layout_width="match_parent"
-                android:layout_height="45dp"
+                android:layout_height="50dp"
                 android:padding="5dp"
                 android:textSize="13sp"
                 android:hint="비밀번호 입력"
@@ -131,15 +131,14 @@
             android:textColor="@color/red"
             android:visibility="gone"
             app:layout_constraintBottom_toTopOf="@+id/btLogin"
-            app:layout_constraintTop_toBottomOf="@+id/cbAuto"
-            tools:layout_editor_absoluteX="40dp" />
+            app:layout_constraintTop_toBottomOf="@+id/cbAuto" />
 
         <!-- 버튼들 (색/간격은 이전과 동일) -->
         <Button
             android:id="@+id/btLogin"
             android:layout_width="0dp"
             android:layout_height="45dp"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="60dp"
             android:text="로그인"
             android:textSize="15sp"
             android:textStyle="bold"
@@ -148,7 +147,6 @@
             android:background="@drawable/rounded_btn"
             app:backgroundTint="@color/blue_navy"
             app:cornerRadius="12dp"
-            android:letterSpacing="0.2"
             app:layout_constraintTop_toBottomOf="@id/cbAuto"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
@@ -188,7 +186,6 @@
             android:background="@drawable/rounded_btn"
             android:textAllCaps="false"
             android:stateListAnimator="@null"
-            android:letterSpacing="0.2"
             app:layout_constraintTop_toBottomOf="@id/btKakao"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
