--- a/android/app/src/main/res/layout/fragment_profile.xml
+++ b/android/app/src/main/res/layout/fragment_profile.xml
@@ -113,7 +113,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="30dp"
+            android:padding="20dp"
             android:layout_marginTop="10dp">
 
             <LinearLayout
@@ -215,7 +215,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:paddingHorizontal="30dp"
+            android:paddingHorizontal="20dp"
             android:layout_marginHorizontal="16dp"
             android:layout_marginBottom="16dp">
 
@@ -252,6 +252,7 @@
                 android:orientation="horizontal"
                 android:layout_marginTop="16dp"
                 android:baselineAligned="false"
+                android:layout_marginBottom="20dp"
                 android:background="@drawable/allergy_table_background"
                 android:padding="1dp">
 
